@@ -2,18 +2,11 @@
 // translated (davidsiaw)
 
 
-// Display debug reports (iWhen something goes wrong during the report, the report is saved.)
+// Display debug reports (When something goes wrong during the report, the report is saved.)
 debug: no
 
 // How long can a socket stall before closing the connection (in seconds)
 stall_time: 60
-
-// When enabled, sets TCP_NODELAY (disable nagel Algorythm) on all connections
-mode_neg: yes
-
-// frame packet size as considered by the server (when there's enough
-// information in queue to fill the frame_size, a "send" is forced)
-//frame_size: 1054
 
 //----- IP Rules Settings -----
 
